swyft_unet/bash_scripts/old_slurms/23-2/slurm-8763861.out
/home/eliasd/lensing/pyrofit-lensing-analysis/experiments/swyft_unet/scripts
  File "/home/eliasd/lensing/pyrofit-lensing-analysis/experiments/swyft_unet/scripts/create_store.py", line 32
    def run(m, nsub, nsim, nsim, simul):
    ^
SyntaxError: duplicate argument 'nsim' in function definition
Usage: train.py [OPTIONS]
Try 'train.py --help' for help.

Error: No such option: --zero Did you mean --lr?
Usage: get_pred.py [OPTIONS]
Try 'get_pred.py --help' for help.

Error: No such option: --zero Did you mean --lr?
